--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <canvas id="GameCanvas"></canvas>
+        <script src="./game/main.js"></script>
+        <script>
+            main();
+        </script>
     </body>
 </html>
