--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Game Up</title>
+        <title>Up</title>
     </head>
     <body>
         <canvas id="GameCanvas"></canvas>
+        <script src="./game/GameGlobal.js"></script>
+        <script src="./game/GameSprite.js"></script>
+        <script src="./game/GameAudio.js"></script>
+        <script src="./game/Game.js"></script>
         <script src="./game/main.js"></script>
         <script>
             main();
