--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
         <title>Up</title>
     </head>
     <body>
-        <canvas id="GameCanvas"></canvas>
+        <canvas id="GameCanvas" width="320" height="480"></canvas>
         <script src="./game/GameGlobal.js"></script>
+        <script src="./game/GLUtils.js"></script>
+        <script src="./game/Matrix.js"></script>
         <script src="./game/GameSprite.js"></script>
         <script src="./game/GameAudio.js"></script>
+        <script src="./game/GameRes.js"></script>
         <script src="./game/Game.js"></script>
         <script src="./game/main.js"></script>
         <script>
