--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Up</title>
+        <title>UP</title>
     </head>
     <body>
         <canvas id="GameCanvas" width="320" height="480"></canvas>
