--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
     <head>
         <meta charset="utf-8" />
         <title>UP</title>
+        <style type="text/css">
+            body {
+                margin: 0;
+            }
+            .container {
+                position: relative;
+            }
+            #overlay {
+                position: absolute;
+                left: 10px;
+                top: 10px;
+                background-color: rgba(0, 0, 0, 0.7);
+                color: white;
+                font-family: monospace;
+                padding: 1em;
+            }
+        </style>
     </head>
     <body>
-        <canvas id="GameCanvas" width="320" height="560"></canvas>
+        <div class="container">
+            <canvas id="GameCanvas" width="360" height="640"></canvas>
+            <div id="overlay">
+                <div>Distance: <span id="distance"></span></div>
+                <div>Speed: <span id="speed"></span></div>
+            </div>
+        </div>
         <script src="./game/GameGlobal.js"></script>
         <script src="./game/GLUtils.js"></script>
         <script src="./game/Matrix.js"></script>
