--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="container">
             <canvas id="GameCanvas" width="360" height="640"></canvas>
             <div id="overlay">
+                <div>OP: [←, →, shift]</div>
                 <div>Distance: <span id="distance"></span></div>
                 <div>Speed: <span id="speed"></span></div>
             </div>
